# synthetic-card-transactions-data-generator-with-aws-batch

./: .gitignore  BATCH_WORKFLOW.md  Makefile  README.md  cdk-outputs.json  cdk.json  package.json
apps/: buildspec.yml  job-deployment-parameters.json
apps/data-generator/: Cargo.toml  Dockerfile
apps/data-generator/schemas/: authorization_hash_schema.json  authorization_schema.json  chargeback_hash_schema.json  chargeback_schema.json  clearing_hash_schema.json  clearing_schema.json
apps/data-generator/src/: common.rs  data_generator.rs  dynamodb_client.rs  main.rs
apps/dynamodb-seeder/: Cargo.toml
apps/dynamodb-seeder/src/: main.rs
apps/job-submitter/: Cargo.toml
apps/job-submitter/src/: main.rs
architecture/: aws-batch-transactions-data-generator.drawio
athena-queries/: sample_queries.sql
lib/: batch-data-generator-stack.ts  glue-tables-construct.ts
test/: batch-data-generator.test.ts
