[package]
name = "data-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.8"
aws-sdk-s3 = "1.20.0"
aws-sdk-dynamodb = "1.20.0"
tokio = { version = "1", features = ["full"] }
parquet = "56.0.0"
arrow = "56.0.0"
rand = "0.8.5"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.41"
rayon = "1.10.0"
anyhow = "1.0.82"
base64ct = "=1.6.0"
env_logger = "0.11"
log = "0.4"
once_cell = "1.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }

